2006-04-23  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/plugin-defs.pl: use PNG_CFLAGS for the png plugin.

	* plug-ins/common/Makefile.am: regenerated.

2006-04-23  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/png.c: don't use long deprecated libpng API, and
	drop support for ancient libpng versions. Fixes bug #339402.

	* configure.in: use pkg-config to detect libpng. This means we now
	require at least libpng 1.2.2, but that's over four years old, so
	that shouldn't be that big a deal.

2006-04-23  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpviewabledialog.c: added "viewable" as a property.

2006-04-23  Sven Neumann  <sven@gimp.org>

	* app/dialogs/module-dialog.c
	* app/dialogs/palette-import-dialog.c: use GimpDialog instead of a
	GimpViewableDialog with a NULL viewable.

	* app/widgets/gimpviewabledialog.c: deprecate use of
	GimpViewableDialog with a NULL viewable.

	* app/dialogs/resolution-calibrate-dialog.c: whitespace.

2006-04-22  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppropwidgets.[ch] (gimp_prop_scale_entry_new):
	renamed parameters to please gtk-doc.

2006-04-21  Sven Neumann  <sven@gimp.org>

	* app/config/gimprc-blurbs.h: minor string changes.

	* app/config/gimprc.c: declared an array as const.

	* app/dialogs/user-install-dialog.c: further streamlining of the
	user installation.

2006-04-21  Sven Neumann  <sven@gimp.org>

	* app/dialogs/user-install-dialog.c: in an effort to basically
	get rid of the user installation dialog, removed the license and
	tuning pages as well as the code that was responsible for the
	nifty orange style. More to come ...

2006-04-21  Sven Neumann  <sven@gimp.org>

	Applied a slightly modified version of a patch from Lode Leroy
	(bug #336183):

	* app/base/gimphistogram.[ch]: added new function
	gimp_histogram_get_threshold() that returns an optimal
	binarization threshold.
	
	* app/tools/gimpthresholdtool.c: use the new function to
	initialize the Threshold tool.
