@@ -101,6 +101,7 @@ psd_save
 psp
 randomize
 raw
+redeye
 retinex
 ripple
 rotate
