@@ -97,6 +97,7 @@
     'psd_save' => { libdep => 'gtk', ui => 1 },
     'psp' => { libdep => 'gtk', ui => 1, optional => 1, libopt => 'z' },
     'randomize' => { libdep => 'gtk', ui => 1 },
+    'redeye' => { libdep => 'gtk', ui => 1 },
     'raw' => { libdep => 'gtk', ui => 1 },
     'retinex' => { libdep => 'gtk', ui => 1 },
     'ripple' => { libdep => 'gtk', ui => 1 },
